[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "manual_segmentation"
version = "0.0.0"
authors = [
  { name="Quan Nguyen", email="quan@bu.edu" },
]
description = "manual segmentation package to validate woundcompute code"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating system :: OS Independent",
]
dependencies = [
    "alphashape==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "attrs==22.1.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "brotli-python==1.1.0",
    "cached-property==1.5.2",
    "cached_property==1.5.2",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.3",
    "click-log==0.4.0",
    "comm==0.2.2",
    "coverage==6.4.4",
    "cycler==0.11.0",
    "debugpy==1.8.8",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "entrypoints==0.4",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "flake8==7.1.0",
    "fonttools==4.37.1",
    "fqdn==1.5.1",
    "gettext-tools==0.22.5",
    "glib-tools==2.80.2",
    "gstreamer==1.24.4",
    "h11==0.14.0",
    "h2==4.1.0",
    "hpack==4.0.0",
    "httpcore==1.0.6",
    "httpx==0.27.2",
    "humanfriendly==10.0",
    "hyperframe==6.0.1",
    "idna==3.10",
    "imageio==2.21.2",
    "importlib-metadata==4.12.0",
    "importlib_resources==6.4.5",
    "iniconfig==1.1.1",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "ipython_genutils==0.2.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.2.0",
    "json5==0.9.27",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-lsp==2.2.5",
    "jupyter_client==7.4.9",
    "jupyter_console==6.6.3",
    "jupyter_core==5.7.2",
    "jupyter_events==0.10.0",
    "jupyter_server==2.14.2",
    "jupyter_server_terminals==0.5.3",
    "jupyterlab==4.3.0",
    "jupyterlab_pygments==0.3.0",
    "jupyterlab_server==2.27.3",
    "jupyterlab_widgets==3.0.13",
    "kiwisolver==1.4.4",
    "markupsafe==3.0.2",
    "matplotlib==3.5.3",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mistune==3.0.2",
    "mkl-service==2.4.2",
    "mkl_fft==1.3.11",
    "mkl_random==1.2.8",
    "mkl_umath==0.1.2",
    "nbclassic==1.1.0",
    "nbclient==0.10.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==2.8.6",
    "notebook==7.2.2",
    "notebook-shim==0.2.4",
    "numpy==1.23.2",
    "opencv-python-headless==4.6.0.66",
    "openpyxl==3.1.5",
    "overrides==7.7.0",
    "packaging==21.3",
    "pandocfilters==1.5.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==9.2.0",
    "pip==24.1.1",
    "pixman==0.43.2",
    "pkgutil-resolve-name==1.3.10",
    "platformdirs==4.3.6",
    "pluggy==1.0.0",
    "ply==3.11",
    "prometheus_client==0.21.0",
    "prompt-toolkit==3.0.48",
    "prompt_toolkit==3.0.48",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "py==1.11.0",
    "pycodestyle==2.12.0",
    "pycparser==2.22",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyflakes==3.2.0",
    "pygments==2.18.0",
    "pyparsing==3.0.9",
    "pyqt5-sip==12.12.2",
    "pysocks==1.7.1",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "python-dateutil==2.8.2",
    "python-fastjsonschema==2.20.0",
    "python-json-logger==2.0.7",
    "python_abi==3.9",
    "pytz==2024.2",
    "pywavelets==1.3.0",
    "pyyaml==6.0",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.21.0",
    "rtree==1.0.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.1.2",
    "scipy==1.9.1",
    "send2trash==1.8.3",
    "setuptools==70.1.1",
    "shapely==1.8.4",
    "sip==6.7.12",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "stack_data==0.6.2",
    "terminado==0.18.1",
    "threadpoolctl==3.1.0",
    "tifffile==2022.8.12",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomli==2.0.2",
    "tornado==6.4.1",
    "tqdm==4.66.5",
    "traitlets==5.14.3",
    "trimesh==3.15.3",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "typing_extensions==4.12.2",
    "typing_utils==0.1.0",
    "tzdata==2024b",
    "uri-template==1.3.0",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "wheel==0.43.0",
    "widgetsnbextension==4.0.13",
    "zipp==3.21.0",
    "zstandard==0.23.0"
]

[project.urls]
"Homepage" = "https://github.com/quan4444/manual_segmentation_woundcompute"
"Bug tracker" = "https://github.com/quan4444/manual_segmentation_woundcompute/issues"